# pyConLAi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
conlai/: context.py
conlai/datasets/: README.md  __init__.py
conlai/optimizer/: __init__.py
conlai/pb/: conl_pb2.py
examples/: README.md
examples/cifar10/: README.md  run.py
examples/cifar10/conf/: dsgd_cifar10.yaml  dsgd_cifar10.yml  lscaffold_cifar10.yml
pyconlai/: __init__.py  context.py
pyconlai/datasets/: README.md  classification.py  mixin.py
pyconlai/optimizer/: __init__.py  dsgd.py  lscaffold.py  mixin.py
pyconlai/pb/: README.md  __init__.py  conl.proto
