[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyconlai"
description = "Client optimizer for use with ConLAi which is ledger type federated learning framework"
authors = [{name = "Rosso inc"}]
readme = "README.md"
requires-python = ">= 3.10"
dynamic = ["version", "dependencies"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
